[gd_scene load_steps=12 format=2]

[ext_resource path="res://PixelatedBoss.gd" type="Script" id=1]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Attack_1_Sprite.png" type="Texture" id=2]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Healthbar_Idle_1_Sprite.png" type="Texture" id=3]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Attack_2_Sprite.png" type="Texture" id=4]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Idle_2_Sprite.png" type="Texture" id=5]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Idle_1_Sprite.png" type="Texture" id=6]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Healthbar_Damaged_1_Sprite.png" type="Texture" id=7]
[ext_resource path="res://Infinite_Health_Boss_Sprites/Infinite_Health_Boss_Attack_3_Sprite.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "damaged",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "attacking",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="PixelatedBoss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "damaged"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -56, -74, -59, -69, -59, -52, -59, -38, -46, -35, -45, 17, -41, 35, -31, 39, -32, 67, -42, 72, -54, 73, -57, 82, -55, 93, -34, 97, -16, 90, -12, 82, -12, 69, -10, 39, 28, 41, 27, 67, 13, 70, 7, 78, 9, 88, 15, 95, 34, 97, 48, 97, 54, 87, 54, 79, 46, 70, 47, 39, 58, 38, 64, 27, 60, -76, 51, -82, 31, -82, -14, -69, -14, -75, -23, -81, -50, -79 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Healthbar_Damage" type="AnimatedSprite" parent="."]
position = Vector2( 1, -92 )
frames = SubResource( 3 )
animation = "idle"

[node name="Healthbar_Health" type="AnimatedSprite" parent="."]
position = Vector2( -60, -96 )
frames = SubResource( 2 )
animation = "idle"
centered = false

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
